...
        app:layout_constraintTop_toTopOf="@id/home_toolbar"
        app:layout_constraintEnd_toStartOf="@id/profile_image"/>


    <!-- Menu Button -->
    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="Menu"
...
            android:text="EXPLORE"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tab_followed"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="12dp"
...
    </LinearLayout>


    <!-- Scrollable Event List -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@id/category_tabs"
        tools:layout_editor_absoluteX="125dp" />
...
