...
        android:paddingBottom="8dp"
        android:text="Select an Option"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recent_week_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_popup"
        android:clickable="true"
...
        android:background="@drawable/rounded_popup"
        android:clickable="true"
        android:text="Filter by text"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/three_recent_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_popup"
        android:clickable="true"
        android:text="Show 3 most recent posts"
...
